# financial-toolkit

./: .buildinfo  .gitignore  README.md  dummy.ipynb  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  toolkit.html
.binder/: postBuild
.doctrees/: environment.pickle  index.doctree  modules.doctree  toolkit.doctree
.github/workflows/: sphinx.yml
_sources/: index.rst.txt  toolkit.rst.txt
docs/: conf.py  index.rst  toolkit.rst
misc/: performance.xlsx
notebooks/: black_scholes.ipynb  cboe_margin.ipynb  data.ipynb  dev.ipynb  market.ipynb  npi.csv
streamlit/: app.py  factors.py  indices.py  options.py  peers.py  portfolio.py  stats.py
streamlit/data/: indices.csv  indices.json  option_strategy.json  signature.md
streamlit/pages/: stats.py
tests/: test_black_scholes.py  test_cboe_margin.py  test_data.py  test_famafrench.py  test_fixed_income.py  test_functional.py  test_portfolio.py  test_visualization.py
tests/data/: test.csv
toolkit/: __init__.py  asset_class.py  black_scholes.py  cboe_margin.py  data.py  fixed_income.py  functional.py  portfolio.py  visualization.py
