[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fintoolkit"
version = "0.0.20"
authors = [
  { name="Chris Cheng", email="kc1116@gmail.com" },
]
description = "Financial Toolkit"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pandas-datareader",
    "statsmodels",
    "scikit-learn",
    "yfinance",
    "matplotlib"
]

[project.urls]
"Homepage" = "https://github.com/chris-kc-cheng/financial-toolkit"
"Bug Tracker" = "https://github.com/chris-kc-cheng/financial-toolkit/issues"

[tool.hatch.build]
include = [
  "toolkit/*.py",
  "/tests",
]